--- a/Bulky_MVC/Views/Category/Index.cshtml
+++ b/Bulky_MVC/Views/Category/Index.cshtml
@@ -1,6 +1,16 @@
 ﻿@model List<Category>
 <h1>Category List</h1>
 
+<div class="container">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-library">Category List</h2>
+        </div>
+        <div class="col-6">
+            <a asp-controller="Category" asp-action="Create">Create a new category</a>
+        </div>
+    </div>
+</div>
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
@@ -20,6 +30,17 @@
                 <td>@obj.Name</td>
                 <td>
                     @obj.DisplayOrder
+                </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square"></i> Edit
+                        </a>
+
+                        <a asp-controller="Category" asp-action="Delete" class="btn btn-danger mx-2">
+                            <i class="bi bi-trash-fill"></i> Delte
+                        </a>
+                    </div>
                 </td>
             </tr>
         }
